--- a/apps/web/components.json
+++ b/apps/web/components.json
@@ -5,17 +5,17 @@
   "tsx": true,
   "tailwind": {
     "config": "",
-    "css": "src/tailwind.css",
+    "css": "../../packages/ui/src/tailwind.css",
     "baseColor": "neutral",
     "cssVariables": true,
     "prefix": ""
   },
   "aliases": {
-    "components": "@workspace/ui",
+    "components": "@/components",
+    "hooks": "@/hooks",
+    "lib": "@/lib",
     "utils": "@yuki/ui/utils",
-    "ui": "@yuki/ui/components",
-    "lib": "@yuki/ui",
-    "hooks": "@yuki/ui/hooks"
+    "ui": "@yuki/ui/components"
   },
   "iconLibrary": "lucide"
 }
