--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -6,13 +6,13 @@
   "type": "module",
   "exports": {
     ".": {
-      "types": "./dist/src/index.d.ts",
+      "types": "./dist/index.d.ts",
       "default": "./src/index.ts"
     }
   },
   "scripts": {
     "build": "tsc",
-    "clean": "git clean -xdf .cache .turbo dist drizzle prisma/generated node_modules",
+    "clean": "git clean -xdf .cache .turbo dist drizzle node_modules",
     "db:push": "bun with-env drizzle-kit push",
     "db:studio": "bun with-env drizzle-kit studio",
     "dev": "tsc --watch",
